--- a/css/product-listing-list.css
+++ b/css/product-listing-list.css
@@ -99,6 +99,7 @@ footer .newsletter-input button.newsletter-subscribe {
 .item-additional-info {
   display: flex;
   justify-content: space-around;
+  min-height: 57px;
 }
 .item-additional-info .text-center .info-val {
   font-size: 20px;
