UI adjustments by Philipp's comments.

--- a/css/products-compare.css
+++ b/css/products-compare.css
@@ -108,7 +108,8 @@ h1.comparable-prods-titles span {
   font-size: 16px;
   margin-bottom: 12px;
 }
-.comparing-parameters .compare-param.active {
+.comparing-parameters .compare-param.active,
+.comparing-parameters .compare-param:hover {
   color: #1f1a21;
 }
 .comparing-block {
@@ -187,15 +188,23 @@ h1.comparable-prods-titles span {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 33.3%;
 }
 .table-col .compare-icon i {
   font-size: 20px;
   margin-bottom: 6px;
 }
+.table-col .compare-icon span {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 .table-col .no-compare-data {
   font-size: 14px;
   font-style: italic;
   color: #CCCCCC;
+  text-align: center;
 }
 .table-col .table-compare-text {
   align-self: stretch;
@@ -402,6 +411,7 @@ li .percent-score span {
 #faq-anchor .table-col .vs-compare-title {
   color: #666666;
   padding-bottom: 3px;
+  text-align: center;
 }
 #faq-anchor .table-col .versus-icon {
   font-size: 22px;
